--- a/Infrastructure/OficinaCardozo.OSService.Infrastructure.csproj
+++ b/Infrastructure/OficinaCardozo.OSService.Infrastructure.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="../Domain/OficinaCardozo.OSService.Domain.csproj" />
     <ProjectReference Include="../Application/OficinaCardozo.OSService.Application.csproj" />
   </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    </ItemGroup>
 </Project>
