fix(ci): renomear etapa para garantir namespace do serviço e adicionar variáveis de ambiente

--- a/.github/workflows/osservice-ci.yml
+++ b/.github/workflows/osservice-ci.yml
@@ -96,6 +96,19 @@ jobs:
         export AWS_REGION="us-east-1"
         aws eks update-kubeconfig --region "$AWS_REGION" --name "$CLUSTER_NAME"
 
+    - name: Garantir namespace do serviço
+      if: env.DEPLOY_ENABLED == 'true'
+      run: |
+        if [ "${GITHUB_REF}" = "refs/heads/master" ]; then
+          NAMESPACE="${K8S_NAMESPACE_PROD}"
+        else
+          NAMESPACE="${K8S_NAMESPACE_HOMOLOG}"
+        fi
+        kubectl create namespace "$NAMESPACE" --dry-run=client -o yaml | kubectl apply -f -
+      env:
+        K8S_NAMESPACE_HOMOLOG: osservice-homolog
+        K8S_NAMESPACE_PROD: osservice-prod
+
     - name: Garantir Secret datadog-agent no namespace
       if: env.DEPLOY_ENABLED == 'true'
       run: |
@@ -104,7 +117,6 @@ jobs:
         else
           NAMESPACE="${K8S_NAMESPACE_HOMOLOG}"
         fi
-
         kubectl create secret generic datadog-agent \
           --from-literal=api-key="${{ secrets.DATADOG_API_KEY }}" \
           --from-literal=DD_SITE="${{ secrets.DATADOG_SITE }}" \
