feat(k8s): adicionar chave API ao segredo do Datadog

--- a/k8s/datadog-secret.yaml
+++ b/k8s/datadog-secret.yaml
@@ -7,4 +7,4 @@ metadata:
 type: Opaque
 data:
   # api_key deve ser base64
-  api_key: ""
+    api_key: MjJjMWZlZjI4MWY2MzVlOGM3OWVmOGVhMDUyODk1Njg=
