--- a/k8s/datadog-agent-secret.yaml
+++ b/k8s/datadog-agent-secret.yaml
@@ -6,5 +6,5 @@ metadata:
     app: oficina-cardozo-osservice-api
 type: Opaque
 data:
-  api_key: MjJjMWZlZjI4MWY2MzVlOGM3OWVmOGVhMDUyODk1Njg=
+  api-key: MjJjMWZlZjI4MWY2MzVlOGM3OWVmOGVhMDUyODk1Njg=
   app_key: NGM4Zjc0OWNiNTA5M2I3YjgzNzYzMDBmZmJhZTZjYjk0MzFiZDMyNQ== # valor convertido para base64
